// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails to solve needs-sat tree 1`] = `[Error: Unable to resolve dependency graph for given manifest]`;

exports[`fails to solve unresolvable tree 1`] = `[Error: Unable to resolve dependency graph for given manifest]`;

exports[`solves complex tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "vba-tools/dictionary",
        "registry": "vba-blocks",
        "version": "^1",
      },
      Object {
        "name": "vba-tools/json",
        "registry": "vba-blocks",
        "version": "^2.3.0",
      },
    ],
    "id": "vba-tools/web@4.1.5",
    "name": "vba-tools/web",
    "source": "registry+vba-blocks#sha256-56c0bfaa84be448b39c65aa83f1c7530db0635a6b2b6ee8589a18feea29e37e9",
    "version": "4.1.5",
  },
  Object {
    "dependencies": Array [],
    "id": "vba-tools/dictionary@1.4.1",
    "name": "vba-tools/dictionary",
    "source": "registry+vba-blocks#sha256-b241062bcd7ffd68c9063e3980a5df4c6781df29d96763a020d291e52454f6a5",
    "version": "1.4.1",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "vba-tools/dictionary",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "vba-tools/json@2.3.0",
    "name": "vba-tools/json",
    "source": "registry+vba-blocks#sha256-3c2760ce2940dd19c16542cead792e0d05e58566155b1fbc72d445fe50a36799",
    "version": "2.3.0",
  },
]
`;

exports[`solves standard tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "vba-tools/dictionary",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "vba-tools/json@2.3.0",
    "name": "vba-tools/json",
    "source": "registry+vba-blocks#sha256-3c2760ce2940dd19c16542cead792e0d05e58566155b1fbc72d445fe50a36799",
    "version": "2.3.0",
  },
  Object {
    "dependencies": Array [],
    "id": "vba-tools/dictionary@1.4.1",
    "name": "vba-tools/dictionary",
    "source": "registry+vba-blocks#sha256-b241062bcd7ffd68c9063e3980a5df4c6781df29d96763a020d291e52454f6a5",
    "version": "1.4.1",
  },
]
`;
